<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#70818e">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/ringInfoGather"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/synInfo"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:background="#000" />

            <include
                layout="@layout/gather_data_synchronize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/groutingInfo"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:background="#000" />

            <include
                layout="@layout/gather_grouting_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/ringInfo"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:background="#000" />

            <include
                layout="@layout/gather_ring_formation" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/qualityInfo"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:background="#000" />

            <include layout="@layout/gather_quality_info" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/projectInfo"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:background="#000" />

            <include
                layout="@layout/gather_project_info" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5sp"
                android:background="#000" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:textStyle="bold"
            android:background="@drawable/bg_btn_syn_select"
            android:textColor="@color/textWhite"
            android:text="@string/save" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
